@@ -1,12 +1,5 @@
-/*
- * This file was generated by the Gradle 'init' task.
- *
- * This generated file contains a sample Java application project to get you started.
- * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.10.2/userguide/building_java_projects.html in the Gradle documentation.
- */
 
 plugins {
-    // Apply the application plugin to add support for building a CLI application in Java.
     id 'application'
     id 'java'
     id 'org.openjfx.javafxplugin' version '0.0.13'
@@ -14,7 +7,6 @@ plugins {
 }
 
 repositories {
-    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
@@ -24,16 +16,6 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-
-    // TestFX Core for headless and UI interaction testing
-    testImplementation "org.testfx:testfx-core:4.0.18"
-    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.13.2'
-    testImplementation group: 'org.testfx', name: 'testfx-junit5', version: '4.0.18'
-    testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '2.1'
-
-    testImplementation 'org.mockito:mockito-core:4.8.0'
-    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
-    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'
 
     // This dependency is used by the application.
     implementation libs.guava
@@ -49,7 +31,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.9'
 }
 
-// Apply a specific Java toolchain to ease working on different environments.
 java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(17)
@@ -57,13 +38,12 @@ java {
 }
 
 application {
-    // Define the main class for the application.
     mainClass = 'io.tamagotchi.App'
 }
 
 javafx {
     version = "17"
-    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base','javafx.media' ] // Include modules you're using
+    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.graphics', 'javafx.base','javafx.media' ]
 }
 
 test {
@@ -75,17 +55,10 @@ test {
         exceptionFormat "full"
         showStandardStreams = true
     }
-
-    jvmArgs = [
-            '--module-path', classpath.asPath, // Ensure modules are found
-            '--add-modules', 'javafx.controls,javafx.fxml,javafx.base',
-            '--add-opens=javafx.graphics/com.sun.javafx.application=ALL-UNNAMED',
-            '--add-opens=javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED'
-    ]
 }
 
 jacocoTestReport {
-    dependsOn test // tests are required to run before generating the report
+    dependsOn test
 }
 
 javadoc {
